k8/gotty_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotty-web
  namespace: fgshow
  labels:
    app: gotty-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotty-web
  strategy: {}
  template:
    metadata:
      labels:
        app: gotty-web
    spec:
      containers:
      - name: gotty-web
        image: lil00/efg:52
        ports:
          - containerPort: 8080
        resources: {}
