k8/gotty_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gotty-web
  namespace: fgshow
spec:
  selector:
    app: gotty-web
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
