k8/gotty_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotty-web
  namespace: fgshow
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gotty-web
                port: 
                  number: 8080
